Four housekeeping fixes
- Delete orphaned 2026.2 GitHub release (tag was removed, release lingered)
- Drop throws ParseException from all conversion service interfaces, impls,
  and tests — LocalDate.parse() is unchecked so the declaration was dead noise
- Fix JAVA_HOME in download-ofx to use SDKMAN current symlink instead of a
  hardcoded JDK version string
- Replace new String(Files.readAllBytes(Paths.get(...))) with Files.readString()

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>